2008-07-31  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Nikon Coolpix L16 , Nikon D700.

	* ptp-unpack.c: Fixed a property handling issue
	  with empty/non existant strings in the unpacker,
	  triggered by the D700.

	* README.ptp2: Added link to now official MTP 1.0 spec.

2008-07-18  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added the Canon EOS 1D Mark III (reported by jholt)

	* library.c: Disabled more 0x2372 panasonic mass storage ids.

2008-07-03  Marcus Meissner  <marcus@jet.franken.de>

	* config.c: allow capture=off

2008-06-13  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Change initial timeout magic 
	  for Canon cameras to use 0.5 second timeouts.

	  Lets hope all the Canons can do this.

2008-06-05  Marcus Meissner  <marcus@jet.franken.de>
	    Linus Walleij  <triad@df.lth.se>

	* music-players.h, device-flags.h: Merged new music
	  players from libmtp.

2008-04-11  Marcus Meissner  <marcus@jet.franken.de>

	* library.c, config.c: Added EOS 450D capture mode.
	  Changed setting of 0xd11c EOS property from 1 to 4.

2008-03-31  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c, ptp.h, config.c: Try to fix EOS capture preparation,
	  by doing a real ptp_eos_getstorageids.

2008-03-15  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Adjust for GPPortInfo change.

2008-03-13  Linus Walleij  <triad@df.lth.se>

	* ptp.c/ptp.h: Added 2 new MTP object format codes.

2008-03-02  Marcus Meissner  <marcus@jet.franken.de>

	* music-players.h: Synced from libmtp.

2008-03-01  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c: MTP GetObjectReferences on Sansa MTP device
	  can skip the dataphase, but return OK as response.

	  Handle this strange case here.

2008-02-22  Marcus Meissner  <marcus@jet.franken.de>

	* library.c, ptp.h:
	  Always use Canon capture mode if available.

	  Allow the Canon capture mode to store its stuff on the card
	  by using the 0xd029 property (CaptureTransferMode).
