@@ -1,3 +1,10 @@
+2008-08-28  Marcus Meissner  <marcus@jet.franken.de>
+
+	* library.c: Increase timeout for mtp proplist reading (from
+	  Chris Bagwell).
+
+	* ptp.c, music-players.h, device-flags.h: Merged updates from libmtp.
+
 2008-07-31  Marcus Meissner  <marcus@jet.franken.de>
 
 	* library.c: Added Nikon Coolpix L16 , Nikon D700.
